Minor paths refactoring

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <canvas id="test-canvas" width="800" height="800" resize></canvas>
+        <canvas id="test-canvas" width="350" height="350"></canvas>
     </body>
 
 </html>
